logs/python-chart.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Python_Chart-1.39.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pychart'...
Listing './lib/python3.5/site-packages/pychart/afm'...
Compiling './lib/python3.5/site-packages/pychart/area.py'...
***   File "./lib/python3.5/site-packages/pychart/area.py", line 166
    raise ValueError, "No chart to draw, and no data range specified.\n";
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pychart/arrow.py'...
***   File "./lib/python3.5/site-packages/pychart/arrow.py", line 74
    raise Exception, "Arrow style must be a number between 0 and 3."
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pychart/bar_plot.py'...
***   File "./lib/python3.5/site-packages/pychart/bar_plot.py", line 127
    raise Exception, "The %dth bar plot in the cluster not found." % nth
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pychart/basecanvas.py'...
***   File "./lib/python3.5/site-packages/pychart/basecanvas.py", line 127
    raise Exception, "Expecting either a filename or a file-like object, but got %s" % fname
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pychart/chart_data.py'...
***   File "./lib/python3.5/site-packages/pychart/chart_data.py", line 29
    raise ValueError, "Can't convert %s to int; line=%s" % (v, line)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pychart/chart_object.py'...
***   File "./lib/python3.5/site-packages/pychart/chart_object.py", line 21
    raise Exception, "%s: unknown attribute %s." % (cls, attr)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pychart/font.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (font.py, line 225)
Compiling './lib/python3.5/site-packages/pychart/gs_frontend.py'...
***   File "./lib/python3.5/site-packages/pychart/gs_frontend.py", line 34
    raise Exception, "Ghostscript not found. path=%s" % str(path)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pychart/interval_bar_plot.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (interval_bar_plot.py, line 122)
Compiling './lib/python3.5/site-packages/pychart/legend.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (legend.py, line 137)
Compiling './lib/python3.5/site-packages/pychart/line_plot.py'...
***   File "./lib/python3.5/site-packages/pychart/line_plot.py", line 81
    raise Exception, 'Line plot has label, but an empty line style and error bar.'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pychart/log_coord.py'...
***   File "./lib/python3.5/site-packages/pychart/log_coord.py", line 29
    raise Exception, "Min value (%s) < 0 in a log coordinate." % min
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pychart/pdfcanvas.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (pdfcanvas.py, line 57)
Compiling './lib/python3.5/site-packages/pychart/pngcanvas.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (pngcanvas.py, line 22)
Compiling './lib/python3.5/site-packages/pychart/pscanvas.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (pscanvas.py, line 170)
Compiling './lib/python3.5/site-packages/pychart/pychart_types.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (pychart_types.py, line 21)
Compiling './lib/python3.5/site-packages/pychart/pychart_util.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (pychart_util.py, line 46)
Compiling './lib/python3.5/site-packages/pychart/rose_plot.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (rose_plot.py, line 53)
Compiling './lib/python3.5/site-packages/pychart/svgcanvas.py'...
***   File "./lib/python3.5/site-packages/pychart/svgcanvas.py", line 142
    raise OverflowError, "No containing group for newpath"
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pychart/text_box.py'...
***   File "./lib/python3.5/site-packages/pychart/text_box.py", line 125
    raise Exception, "Unsupported alignment (" + halign + ")"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pychart/theme.py'...
***   File "./lib/python3.5/site-packages/pychart/theme.py", line 98
    raise ValueError, "Need to specify margin=LEFT,BOTTOM,RIGHT,TOP"
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
